--- a/cgm-addons/cgm_sale/views/product_template_views.xml
+++ b/cgm-addons/cgm_sale/views/product_template_views.xml
@@ -8,6 +8,7 @@
         <field name="arch" type="xml">
             <xpath expr="//tree" postion="inside">
                 <field name="form_id" optional="hide"/>
+                <field name="material_id" optional="hide"/>
             </xpath>
         </field>
     </record>
@@ -19,20 +20,23 @@
         <field name="arch" type="xml">
             <field name="categ_id" position="after">
                 <field name="form_id"/>
+                <field name="material_id"/>
             </field>
             <xpath expr="//group" position="inside">
                 <filter string="Product Form" name="filter_product_form" context="{'group_by': 'form_id'}"/>
+                <filter string="Product Material" name="filter_material" context="{'group_by': 'material_id'}"/>
             </xpath>
         </field>
     </record>
 
-    <record id="product_template_form_inherit" model="ir.ui.view">
+    <record id="product_template_form_view_inherit" model="ir.ui.view">
         <field name="name">product.template.form.view.inherit</field>
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="arch" type="xml">
             <field name="categ_id" position="after">
                 <field name="form_id"/>
+                <field name="material_id"/>
             </field>
         </field>
     </record>
