--- a/cgm-addons/cgm_sale/views/product_template_views.xml
+++ b/cgm-addons/cgm_sale/views/product_template_views.xml
@@ -9,6 +9,7 @@
             <xpath expr="//tree" postion="inside">
                 <field name="form_id" optional="hide"/>
                 <field name="material_id" optional="hide"/>
+                <field name="licence_id" optional="hide"/>
             </xpath>
         </field>
     </record>
@@ -21,10 +22,12 @@
             <field name="categ_id" position="after">
                 <field name="form_id"/>
                 <field name="material_id"/>
+                <field name="licence_id"/>
             </field>
             <xpath expr="//group" position="inside">
                 <filter string="Product Form" name="filter_product_form" context="{'group_by': 'form_id'}"/>
-                <filter string="Product Material" name="filter_material" context="{'group_by': 'material_id'}"/>
+                <filter string="Product Material" name="filter_product_material" context="{'group_by': 'material_id'}"/>
+                <filter string="Product Licence" name="filter_product_licence" context="{'group_by': 'licence_id'}"/>
             </xpath>
         </field>
     </record>
@@ -37,6 +40,7 @@
             <field name="categ_id" position="after">
                 <field name="form_id"/>
                 <field name="material_id"/>
+                <field name="licence_id"/>
             </field>
         </field>
     </record>
