--- a/cgm-addons/cgm_sale/views/ir_ui_menu.xml
+++ b/cgm-addons/cgm_sale/views/ir_ui_menu.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-    <data noupdate="0">
+  <data noupdate="0">
 
-        <menuitem id="product_form_menu"
-                  name="Product Forms"
-                  parent="sale.prod_config_main"
-                  sequence="10"
-                  action="product_form_action"/>
+    <menuitem id="product_form_menu"
+              name="Product Forms"
+              parent="sale.prod_config_main"
+              sequence="10"
+              action="product_form_action"/>
 
-        <menuitem name="Product Materials"
-                  id="product_material_menu"
-                  parent="sale.prod_config_main"
-                  action="product_material_action"
-                  sequence="20"/>
+    <menuitem name="Product Materials"
+              id="product_material_menu"
+              parent="sale.prod_config_main"
+              action="product_material_action"
+              sequence="20"/>
 
-    </data>
+    <menuitem name="Families"
+              id="product_category_menu"
+              parent="sale.prod_config_main"
+              action="product.product_category_action_form"
+              sequence="30"/>
+
+  </data>
 </odoo>
