--- a/cgm-addons/cgm_sale/views/product_template_views.xml
+++ b/cgm-addons/cgm_sale/views/product_template_views.xml
@@ -11,6 +11,7 @@
                 <field name="material_id" optional="hide"/>
                 <field name="licence_id" optional="hide"/>
                 <field name="collection_id" optional="hide"/>
+                <field name="brand_id" optional="hide"/>
             </xpath>
         </field>
     </record>
@@ -25,6 +26,7 @@
                 <field name="material_id"/>
                 <field name="licence_id"/>
                 <field name="collection_id"/>
+                <field name="brand_id"/>
             </field>
             <field name="categ_id" position="attributes">
                 <attribute name="string">Product Family</attribute>
@@ -37,6 +39,7 @@
                 <filter string="Product Material" name="filter_product_material" context="{'group_by': 'material_id'}"/>
                 <filter string="Product Licence" name="filter_product_licence" context="{'group_by': 'licence_id'}"/>
                 <filter string="Product Collection" name="filter_product_collection" context="{'group_by': 'collection_id'}"/>
+                <filter string="Product Brand" name="filter_product_brand" context="{'group_by': 'brand_id'}"/>
             </xpath>
         </field>
     </record>
@@ -51,6 +54,7 @@
                 <field name="material_id"/>
                 <field name="licence_id"/>
                 <field name="collection_id"/>
+                <field name="brand_id"/>
             </field>
         </field>
     </record>
