--- a/cgm-addons/cgm_sale/views/ir_ui_menu.xml
+++ b/cgm-addons/cgm_sale/views/ir_ui_menu.xml
@@ -32,5 +32,11 @@
                   action="product.product_category_action_form"
                   sequence="50"/>
 
+        <menuitem name="Product Devices"
+                  id="product_device_menu"
+                  parent="sale.prod_config_main"
+                  action="product_device_action"
+                  sequence="60"/>
+
     </data>
 </odoo>
