--- a/cgm-addons/cgm_sale/views/product_brand_views.xml
+++ b/cgm-addons/cgm_sale/views/product_brand_views.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
+
     <record id="product_brand_form_view" model="ir.ui.view">
         <field name="name">product.brand.form.view</field>
         <field name="model">product.brand</field>
@@ -55,7 +56,7 @@
     <record id="product_brand_action" model="ir.actions.act_window">
         <field name="name">Product Brands</field>
         <field name="res_model">product.brand</field>
-        <field name="search_view_id" ref="product_brand_search_view"/>
         <field name="view_mode">tree,form</field>
     </record>
+
 </odoo>
