--- a/cgm-addons/cgm_sale/views/product_template_views.xml
+++ b/cgm-addons/cgm_sale/views/product_template_views.xml
@@ -13,6 +13,7 @@
                 <field name="brand_id" optional="hide"/>
                 <field name="collection_id" optional="hide"/>
                 <field name="device_id" optional="hide"/>
+                <field name="color_id" optional="hide"/>
             </xpath>
         </field>
     </record>
@@ -29,6 +30,7 @@
                  <field name="brand_id"/>
                 <field name="collection_id"/>
                 <field name="device_id"/>
+                <field name="color_id"/>
             </field>
             <field name="categ_id" position="attributes">
                 <attribute name="string">Product Family</attribute>
@@ -43,6 +45,7 @@
                 <filter string="Device" name="filter_product_device" context="{'group_by': 'device_id'}"/>
                 <filter string="Product Collection" name="filter_product_collection" context="{'group_by': 'collection_id'}"/>
                 <filter string="Product Brand" name="filter_product_brand" context="{'group_by': 'brand_id'}"/>
+                <filter string="Product Color" name="filter_product_color" context="{'group_by': 'color_id'}"/>
             </xpath>
         </field>
     </record>
@@ -71,8 +74,11 @@
                     <field name="categ_id"/>
                     <field name="form_id"/>
                     <field name="material_id"/>
+                    <field name="color_id"/>
                     <field name="licence_id"/>
+                    <field name="brand_id"/>
                     <field name="collection_id"/>
+                    <field name="device_id"/>
                 </group>
             </xpath>
 
