--- a/cgm-addons/cgm_sale/views/product_template_views.xml
+++ b/cgm-addons/cgm_sale/views/product_template_views.xml
@@ -15,6 +15,14 @@
                 <field name="device_id" optional="hide"/>
                 <field name="color_id" optional="hide"/>
             </xpath>
+
+            <field name="standard_price" position="attributes">
+                <attribute name="readonly">0</attribute>
+            </field>
+
+            <field name="default_code" position="attributes">
+                <attribute name="readonly">1</attribute>
+            </field>
         </field>
     </record>
 
@@ -27,7 +35,7 @@
                 <field name="form_id"/>
                 <field name="material_id"/>
                 <field name="licence_id"/>
-                 <field name="brand_id"/>
+                <field name="brand_id"/>
                 <field name="collection_id"/>
                 <field name="device_id"/>
                 <field name="color_id"/>
@@ -82,17 +90,17 @@
                 </group>
             </xpath>
 
-            <xpath expr="//field[@name='default_code']" position="attributes">
+            <field name="default_code" position="attributes">
                 <attribute name="string">SKU Code</attribute>
-            </xpath>
+            </field>
 
-            <xpath expr="//field[@name='barcode']" position="attributes">
+            <field name="barcode" position="attributes">
                 <attribute name="string">Code EAN</attribute>
-            </xpath>
+            </field>
 
-            <xpath expr="//field[@name='categ_id']" position="attributes">
+            <field name="categ_id" position="attributes">
                 <attribute name="string">Family</attribute>
-            </xpath>
+            </field>
         </field>
     </record>
 
