--- a/cgm-addons/cgm_sale/views/product_template_views.xml
+++ b/cgm-addons/cgm_sale/views/product_template_views.xml
@@ -4,6 +4,7 @@
     <record id="product_template_tree_view_inherit" model="ir.ui.view">
         <field name="name">product.template.tree.view.inherit</field>
         <field name="model">product.template</field>
+        <field name="priority">20</field>
         <field name="inherit_id" ref="product.product_template_tree_view"/>
         <field name="arch" type="xml">
             <xpath expr="//tree" postion="inside">
