--- a/cgm-addons/cgm_sale/views/product_template_views.xml
+++ b/cgm-addons/cgm_sale/views/product_template_views.xml
@@ -24,6 +24,22 @@
             <field name="default_code" position="attributes">
                 <attribute name="readonly">1</attribute>
             </field>
+
+            <field name="default_code" position="attributes">
+                <attribute name="string">SKU Code</attribute>
+            </field>
+
+            <field name="barcode" position="attributes">
+                <attribute name="string">EAN code</attribute>
+            </field>
+
+            <field name="categ_id" position="attributes">
+                <attribute name="string">Family</attribute>
+            </field>
+
+            <field name="responsible_id" position="attributes">
+                <attribute name="optional">show</attribute>
+            </field>
         </field>
     </record>
 
@@ -96,7 +112,7 @@
             </field>
 
             <field name="barcode" position="attributes">
-                <attribute name="string">Code EAN</attribute>
+                <attribute name="string">EAN code</attribute>
             </field>
 
             <field name="categ_id" position="attributes">
