--- a/cgm-addons/cgm_purchase/views/ir_ui_menu.xml
+++ b/cgm-addons/cgm_purchase/views/ir_ui_menu.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-    <menuitem id="state_of_needs_menu"
-              name="State of needs"
-              sequence="-1"
-              action="state_of_needs_action"
-              parent="purchase.menu_procurement_management"/>
+    <data noupdate="0">
+
+        <menuitem id="need_state_menu"
+                  name="Need States"
+                  sequence="0"
+                  action="purchase_order_action"
+                  parent="purchase.menu_purchase_root"/>
+
+    </data>
 </odoo>
