[IMP] #CGM-364 : stock states

--- a/cgm-addons/cgm_sale/views/ir_ui_menu.xml
+++ b/cgm-addons/cgm_sale/views/ir_ui_menu.xml
@@ -50,5 +50,11 @@
                   action="product_color_action"
                   sequence="80"/>
 
+        <menuitem name="Stock states"
+                  id="stock_state_menu"
+                  parent="sale.sale_menu_root"
+                  action="stock_state_action"
+                  sequence="0"/>
+
     </data>
 </odoo>
