--- a/cgm-addons/cgm_purchase/report/purchase_templates.xml
+++ b/cgm-addons/cgm_purchase/report/purchase_templates.xml
@@ -6,7 +6,7 @@
             <table class="w-100">
                 <tr>
                     <td class="text-left"><h2 class="p-2">State of Needs <span t-field="o.name"/></h2></td>
-                    <td class="text-right"><img class="p-2 d-block" t-if="o.licence_id" t-att-src="image_data_uri(o.licence_id.image_128)" alt="Licence"/></td>
+                    <td class="text-right"><img class="p-2 d-block" t-if="o.licence_id.image_128" t-att-src="image_data_uri(o.licence_id.image_128)" alt="Licence"/></td>
                 </tr>
             </table>
         </xpath>
