--- a/cgm-addons/cgm_sale/views/sale_order_template_views.xml
+++ b/cgm-addons/cgm_sale/views/sale_order_template_views.xml
@@ -1,58 +1,81 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-    <record id="sale_order_template_view_form_state" model="ir.ui.view">
+
+    <record id="sale_order_template_view_form_inherit" model="ir.ui.view">
         <field name="name">sale.order.template.form.state</field>
         <field name="model">sale.order.template</field>
+        <field name="mode">primary</field>
+        <field name="priority">100</field>
         <field name="inherit_id" ref="sale_management.sale_order_template_view_form"/>
-        <field name="type">form</field>
         <field name="arch" type="xml">
+
+            <xpath expr="//div[hasclass('oe_title')]" position="replace">
+                <div class="oe_title">
+                    <span class="o_form_label">Name</span>
+                    <h1>
+                        <field name="name" placeholder="e.g. Stock State Guess 2022-07-25"/>
+                    </h1>
+                </div>
+            </xpath>
+
             <field name="active" position="after">
-                <field name="licence_id" attrs="{'invisible': [('type', '!=', 'state')], 'required': [('type', '=', 'state')]}"/>
-                <field name="partner_ids" attrs="{'invisible': [('type', '!=', 'state')], 'required': [('type', '=', 'state')]}" widget="many2many_tags"/>
+                <field name="licence_id" required="1"/>
+                <field name="partner_ids" widget="many2many_tags"/>
             </field>
 
             <field name="company_id" position="before">
-                <field name="type" attrs="{'invisible': [('type', '!=', 'state')], 'required': [('type', '=', 'state')]}"/>
+                <field name="type" required="1"/>
             </field>
 
             <xpath expr="//sheet" position="before">
                 <header>
-                    <field name="state" widget="statusbar" attrs="{'invisible': [('type', '!=', 'state')], 'required': [('type', '=', 'state')]}"/>
+                    <field name="state" widget="statusbar"/>
                 </header>
             </xpath>
 
             <div name="button_box" position="inside">
-                <button class="oe_stat_button" name="action_view_orders_n_quotations" type="object" icon="fa-database" attrs="{'invisible': [('type', '!=', 'state')]}">
+                <button class="oe_stat_button" name="action_view_sale_orders" type="object" icon="fa-usd">
                     <div class="o_field_widget o_stat_info">
                         <span class="o_stat_value">
-                            <field name="order_ids_count"/>
+                            <field name="sale_order_count"/>
                         </span>
-                        <span class="o_stat_text">Quotations / Orders</span>
+                        <span class="o_stat_text">Quotations/SO</span>
                     </div>
                 </button>
             </div>
         </field>
     </record>
 
-    <record id="sale_order_template_view_tree_state" model="ir.ui.view">
+    <record id="sale_order_template_view_tree_inherit" model="ir.ui.view">
         <field name="name">sale.order.template.tree.state</field>
         <field name="model">sale.order.template</field>
+        <field name="mode">primary</field>
+        <field name="priority">100</field>
         <field name="inherit_id" ref="sale_management.sale_order_template_view_tree"/>
-        <field name="type">tree</field>
         <field name="arch" type="xml">
+
             <field name="name" position="after">
-                <field name="type" invisible="1"/>
-                <field name="licence_id" invisible="context.get('state_fields', 1)"/>
-                <field name="state" invisible="context.get('state_fields', 1)"/>
+                <field name="licence_id"/>
+                <field name="state"/>
             </field>
+
+            <field name="name" position="attributes">
+                <attribute name="string">Name</attribute>
+            </field>
+
         </field>
     </record>
 
     <record id="stock_state_action" model="ir.actions.act_window">
-        <field name="name">Stock states</field>
+        <field name="name">Stock States</field>
         <field name="res_model">sale.order.template</field>
         <field name="view_mode">tree,form</field>
-        <field name="domain">[('type', '=', 'state')]</field>
-        <field name="context">{'default_type': 'state', 'state_fields': 0}</field>
+        <field name="view_ids"
+               eval="[(5, 0, 0),
+                          (0, 0, {'view_mode': 'tree', 'view_id': ref('sale_order_template_view_tree_inherit')}),
+                          (0, 0, {'view_mode': 'form', 'view_id': ref('sale_order_template_view_form_inherit')})]"/>
+        <field name="domain">[('type', '=', 'stock_state')]</field>
+        <field name="context">{'default_type': 'stock_state'}</field>
     </record>
+
 </odoo>
