--- a/cgm-addons/cgm_sale/report/sale_report_templates.xml
+++ b/cgm-addons/cgm_sale/report/sale_report_templates.xml
@@ -19,4 +19,38 @@
             <th name="th_description" class="text-left">Name</th>
         </xpath>
     </template>
+
+    <template id="cgm_stock_state_document" inherit_id="sale.report_saleorder_document" primary="True" priority="1000">
+        <xpath expr="//h2[hasclass('mt16')]" position="replace">
+            <h2>
+                <span>Stock State</span> <span t-field="doc.name"/>
+            </h2>
+        </xpath>
+
+        <!-- th -->
+        <xpath expr="//th[@name='th_quantity']" position="before">
+            <th name="th_barcode" class="text-left">EAN Code</th>
+        </xpath>
+
+        <xpath expr="//th[@name='th_quantity']" position="after">
+            <th name="th_desired_qty" class="text-right">Desired Quantity</th>
+        </xpath>
+
+        <!-- td -->
+        <xpath expr="//td[@name='td_quantity']" position="after">
+            <th name="td_barcode"><span t-field="line.product_id.barcode"/></th>
+        </xpath>
+
+        <xpath expr="//td[@name='td_quantity']" position="before">
+            <th name="th_desired_qty"></th>
+        </xpath>
+    </template>
+
+    <template id="cgm_report_stock_state" inherit_id="sale.report_saleorder" primary="True" priority="1000">
+        <xpath expr="//t[@t-call='sale.report_saleorder_document']" position="replace">
+            <t t-call="cgm_sale.cgm_stock_state_document" t-lang="doc.partner_id.lang"/>
+        </xpath>
+    </template>
+
+
 </odoo>
