--- a/cgm-addons/cgm_sale/views/sale_order_template_views.xml
+++ b/cgm-addons/cgm_sale/views/sale_order_template_views.xml
@@ -8,7 +8,7 @@
         <field name="priority">100</field>
         <field name="inherit_id" ref="sale_management.sale_order_template_view_form"/>
         <field name="arch" type="xml">
-        
+
             <xpath expr="//div[hasclass('oe_title')]" position="replace">
                 <div class="oe_title">
                     <span class="o_form_label">Name</span>
@@ -66,10 +66,25 @@
         </field>
     </record>
 
+    <record id="sale_order_template_view_search" model="ir.ui.view">
+        <field name="name">sale.order.template.search</field>
+        <field name="model">sale.order.template</field>
+        <field name="arch" type="xml">
+            <search string="Search Quotation Template">
+                <field name="name"/>
+                <field name="licence_id"/>
+                <group expand="0" string="Group By">
+                    <filter string="Licence" name="filter_product_licence" context="{'group_by': 'licence_id'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
+
     <record id="stock_state_action" model="ir.actions.act_window">
         <field name="name">Stock States</field>
         <field name="res_model">sale.order.template</field>
         <field name="view_mode">tree,form</field>
+        <field name="search_view_id" ref="sale_order_template_view_search"/>
         <field name="view_ids"
                eval="[(5, 0, 0),
                       (0, 0, {'view_mode': 'tree', 'view_id': ref('sale_order_template_view_tree_inherit')}),
