--- a/cgm-addons/cgm_sale/views/sale_order_template_views.xml
+++ b/cgm-addons/cgm_sale/views/sale_order_template_views.xml
@@ -31,6 +31,13 @@
 
             <xpath expr="//sheet" position="before">
                 <header>
+                    <button string="Verify stock" type="object" name="verify_stock_qty" attrs="{'invisible': [('state', '!=', 'draft')]}"/>
+                    <button string="Generate stock states" type="object" name="generate_quotations" attrs="{'invisible': [('state', '!=', 'verified')]}"/>
+                    <button string="Send quotations" type="object" name="send_quotations" attrs="{'invisible': [('state', '!=', 'generated')]}"/>
+                    <button string="Print quotations" type="object" name="print_quotations" attrs="{'invisible': [('state', '!=', 'generated')]}"/>
+                    <button string="Cancel" type="object" name="cancel_quotations"/>
+                    <button string="Validate" type="object" name="validate_quotations"/>
+                    <button string="Draft" type="object" name="draft_quotations" attrs="{'invisible': [('state', '!=', 'cancel')]}"/>
                     <field name="state" widget="statusbar"/>
                 </header>
             </xpath>
