--- a/cgm-addons/cgm_sale/views/sale_order_template_views.xml
+++ b/cgm-addons/cgm_sale/views/sale_order_template_views.xml
@@ -84,6 +84,7 @@
         <field name="name">Stock States</field>
         <field name="res_model">sale.order.template</field>
         <field name="view_mode">tree,form</field>
+        <field name="search_view_id" ref="sale_order_template_view_search"/>
         <field name="view_ids"
                eval="[(5, 0, 0),
                       (0, 0, {'view_mode': 'tree', 'view_id': ref('sale_order_template_view_tree_inherit')}),
