--- a/cgm-addons/cgm_purchase/report/purchase_reports.xml
+++ b/cgm-addons/cgm_purchase/report/purchase_reports.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-    <record id="report_purchase_quotation" model="ir.actions.report">
+    <record id="report_state_neet" model="ir.actions.report">
         <field name="name">State of Needs</field>
         <field name="model">purchase.order</field>
         <field name="report_type">qweb-pdf</field>
