--- a/cgm-addons/cgm_purchase/views/need_mgmt_process_views.xml
+++ b/cgm-addons/cgm_purchase/views/need_mgmt_process_views.xml
@@ -22,7 +22,7 @@
                                 attrs="{'invisible':[('state', '!=', 'po_generated')]}"/>
                         <button name="button_view_pos" string="View POs" type="object" class="oe_highlight"
                                 data-hotkey="t" attrs="{'invisible':[('state', 'not in', ['po_generated', 'done'])]}"/>
-                        <button name="button_cancel" string="Cancel" type="object" data-hotkey="x"
+                        <button name="button_cancel" string="Cancel Need" type="object" data-hotkey="x"
                                 attrs="{'invisible':[('state', '=', 'cancel')]}"/>
                         <button name="button_draft" states="cancel" string="Set to Draft" type="object" data-hotkey="o"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,checked,sent,confirmed,po_generated,done"
@@ -49,14 +49,16 @@
                         <group>
                             <group>
                                 <field name="reference"/>
-                                <field name="licence_id"/>
-                                <field name="currency_id"/>
+                                <field name="licence_id" options="{'no_create': True, 'no_edit': True}"/>
+                                <field name="currency_id" options="{'no_create': True, 'no_edit': True}"/>
+                                <field name="user_id" options="{'no_create': True, 'no_edit': True}"/>
                                 <field name="purchase_order_ids" invisible="1"/>
                             </group>
                             <group>
                                 <field name="date"/>
                                 <field name="date_approve"/>
-                                <field name="company_id"/>
+                                <field name="responsible_id" options="{'no_create': True, 'no_edit': True}"/>
+                                <field name="company_id" options="{'no_create': True, 'no_edit': True}"/>
                             </group>
                         </group>
                         <notebook>
@@ -79,7 +81,7 @@
                                         <field name="barcode"/>
                                         <field name="qty_available"/>
                                         <field name="virtual_available"/>
-                                        <field name="qty_expected"/>
+                                        <field name="qty_projected"/>
                                         <field name="product_qty"/>
                                         <field name="price_unit" widget="monetary" options="{'currency_field': 'currency_id'}"/>
                                         <field name="seller_id" context="{'filter_by_product': product_id}"/>
@@ -139,6 +141,9 @@
                 <search string="Need Mgmt Process">
                     <field name="reference"/>
                     <field name="name"/>
+                    <field name="user_id"/>
+                    <field name="responsible_id"/>
+                    <field name="licence_id"/>
                     <group expand="1" string="Group By">
                         <filter string="Date" name="date_filter_group_by" domain="[]" context="{'group_by':'date'}"/>
                         <filter string="State" name="state_filter_group_by" domain="[]" context="{'group_by':'state'}"/>
@@ -148,7 +153,7 @@
         </record>
 
         <record id="need_mgmt_process_act_window" model="ir.actions.act_window">
-            <field name="name">Need Mgmt Process</field>
+            <field name="name">Needs Mgmt Process</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">need.mgmt.process</field>
             <field name="view_mode">tree,form,calendar</field>
